- fix the left spacing on action stats in touts

--- a/wp-content/themes/nationswell/css/tablet.css
+++ b/wp-content/themes/nationswell/css/tablet.css
@@ -1468,7 +1468,7 @@ input[type="submit"] {
   height: 4.2rem;
   vertical-align: middle;
   position: relative;
-  left: -2.1rem;
+  margin-left: -2.1rem;
 }
 /* line 88, ../scss/partials/base/_components.scss */
 .support-cause .indicator.indicator--module:before {
