--- a/wp-content/themes/nationswell/scss/partials/base/_components.scss
+++ b/wp-content/themes/nationswell/scss/partials/base/_components.scss
@@ -83,7 +83,7 @@
       height: 4.2rem;
       vertical-align: middle;
       position: relative;
-      left: -2.1rem;
+      margin-left: -2.1rem;
 
       &:before {
         font-size: 3.4rem;
